/**
* @version $Id$
* @package FrontAccounting
* @copyright (C) 2005 - 2011 FrontAccounting, LLC
* @license http://www.gnu.org/copyleft/gpl-3.0.html GNU/GPL
* FrontAccounting is Free Software
*/

1. Changelog
------------
This is a changelog for FrontAccounting All releases.

2013-03-29 : 3213 : Missing Journal Inquiry: Work Order selection in list selector.
2013-03-24 : 3212 : header.inc cleanup
2013-03-24 : 3211 : Line end cleanups.
2013-03-23 : 3210 : Cleanup of 3209
2013-03-23 : 3209 : Cleanup
2013-03-23 : 3208 : Added pre_header and pre_footer hooks.
2013-03-20 : 3207 : Cleanups
2013-03-19 : 3206 : Cleanup in Customer Payments (fixed blinking error msg during processing payment)
2013-03-18 : 3205 : Changes in standard themes: fixed html, menu index can be rendered by extension module
2013-03-15 : 3204 : Janusz Merge to default
2013-03-15 : 3203 : Customer Payments: fixed allocatable transactions display on start of new customer payment.
2013-03-11 : 3202 : Fixed error on edit of a customer payment (certain MySql releases).
2013-03-08 : 3201 : Crediting an invoice in transactions shows wrong invoice date.
2013-03-07 : 3200 : Direct Invoice has wrong Comment (auto).
2013-03-07 : 3199 : Wrong column for array_substitute in delivery and invoice templates.
2013-03-06 : 3198 : When using templates for delivery and invoice, the lines and comments were missing. 
2013-03-06 : 3197 : Fixed bug in PARAM6 when printing and included comments also if any. 
2013-03-06 : 3196 : Force status to integer value before writing database.
2013-03-04 : 3195 : Wrong test order
2013-03-03 : 3194 : Fixed dimensions support in supplier invoice: supplier dimension (if any) overrides stock item defined dimension.
2013-02-27 : 3193 : Prettier code in get_date_picker. Worked anyhow. 
2013-02-27 : 3192 : Fixed charge customer address in Sales Order report. 
2013-02-22 : 3191 : Improved favicon.ico and smaller size (fewer colors) 
2013-02-21 : 3190 : New and better favicon.ico file